Complete login with google, github and database.

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -17,7 +17,7 @@
 <!--Main content-->
 <section data-th-replace="${content}"></section>
 <!--Common footer-->
-<h1>This is common footer</h1>
+<!--<h1>This is common footer</h1>-->
 
 <script data-th-src="@{'/js/script.js'}"></script>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
