--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,10 +7,93 @@
     <meta charset="UTF-8">
     <title>Login page</title>
 </head>
-<body>
-<div id="content">
-    <h1>Login page</h1>
+<body class="bg-gray-100 dark:bg-gray-900">
+<div id="content" class="min-h-screen flex justify-center px-4 py-10">
+    <div class="w-full max-w-lg mt-10">
+        <!-- Card -->
+        <div class="mt-14 mb-3 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-xl shadow-lg p-8 transition-shadow duration-300 hover:shadow-2xl">
+            <div th:replace="message::messagebox"></div>
+            <!-- Form Header -->
+            <h5 class="mb-1 text-2xl font-semibold text-center text-gray-900 dark:text-white">Login Here</h5>
+            <p class="text-center text-gray-500 dark:text-gray-400 mb-3">
+                Start managing your contacts on the cloud...
+            </p>
+
+            <p class="text-red-600 text-center" th:if="${param.error}">Invalid Username and password</p>
+            <p class="text-green-600 text-center" th:if="${param.logout}">You have been logged out</p>
+
+            <!-- Signup Form -->
+            <form
+                    class="space-y-3"
+                    method="post"
+                    data-th-action="@{'/authenticate'}"
+                    >
+                <input type="hidden" name="_csrf" value="${_csrf.token}" />
+                <!-- Username Field -->
+                <div>
+                    <label for="email" class="block text-sm font-medium text-gray-900 dark:text-white mb-1">Email</label>
+                    <input
+                            type="email"
+                            id="email"
+                            name="email"
+                            class="w-full bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-3"
+                            placeholder="name@flowbite.com"
+                            required
+                    />
+<!--                    <p class="text-red-500 px-1 py-2" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>-->
+                </div>
+
+                <!-- Password Field -->
+                <div>
+                    <label for="password"  class="block text-sm font-medium text-gray-900 dark:text-white mb-1">Password</label>
+                    <input
+                            type="password"
+                            id="password"
+                            name="password"
+                            class="w-full bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-3"
+                            placeholder="Enter your password"
+                            required
+                    />
+<!--                    <p class="text-red-500 px-1 py-2" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>-->
+                </div>
+
+
+                <!-- Buttons -->
+                <div class="social-buttons-container flex justify-center mt-5">
+                    <button
+                            type="submit"
+                            class="flex items-center px-6 m-2 py-2 mb-4 text-white bg-red-500 rounded-lg shadow hover:bg-red-600 sm:w-auto text-white font-semibold rounded-lg focus:ring-4 focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-800 transition-colors"
+                    >
+                        Login
+                    </button>
+                    <button
+                            type="submit"
+                            class="flex items-center px-6 m-2 py-2 mb-4 text-white bg-gray-800 rounded-lg shadow hover:bg-gray-900 text-white font-semibold rounded-lg focus:ring-4 focus:ring-gray-300 dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 transition-colors"
+                    >
+                        Reset
+                    </button>
+                </div>
+            </form>
+            <div class="social-buttons-container flex justify-center mt-2">
+                <!-- Google Login Button -->
+                <a data-th-href="@{'/oauth2/authorization/google'}" class="py-2 px-5 w-1/2 item-center justify-center   mb-4 text-white bg-red-500 rounded-lg shadow hover:bg-red-600 dark:bg-blue-500 dark:hover:bg-blue-600 ">
+                    <i class="fab fa-google text-lg mr-2"></i>
+                    <span>Login with Google</span>
+                </a>
+
+                <!-- GitHub Login Button -->
+                <a data-th-href="@{'/oauth2/authorization/github'}" class="py-2 px-5 w-1/2 item-center justify-center mb-4 text-white bg-gray-800 rounded-lg shadow hover:bg-gray-900 ml-3 dark:bg-red-500 dark:hover:bg-red-600 ">
+                    <i class="fab fa-github text-lg mr-2"></i>
+                    <span>Login with GitHub</span>
+                </a>
+            </div>
+
+        </div>
+    </div>
 </div>
 
+<script>
+    console.log("Signup page");
+</script>
 </body>
 </html>
